<resources>
    <string name="app_name">Calories Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fibers">Fibers</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="kcals">KCals</string>
    <string name="carbs">Carbs</string>
    <string name="proteins">Proteins</string>
    <string name="sugars">Sugars</string>
    <string name="fats">Fats</string>

    <string name="save">Save</string>

    <string name="clear_history">Clear History</string>

    <string name="filter_by_brand">Filter by Brand:</string>
    <string name="filter_by_name">Filter by Name:</string>

    <string name="kcal_current_goal">KCals current goal:</string>
    <string name="sugars_current_goal">Sugars current goal:</string>
    <string name="fats_current_goal">Fats current goal:</string>
    <string name="carbs_current_goal">Carbs current goal:</string>
    <string name="proteins_current_goal">Proteins current goal:</string>
    <string name="fibers_current_goal">Fibers current goal:</string>
    <string name="title_activity_display">Add Product</string>

    <string name="overview">Overview</string>
    <string name="products">Products</string>
    <string name="history">History</string>
    <string name="clear_history_alert">You sure you want to delete history?</string>
    <string name="ok">OK</string>
    <string name="nope">Nope</string>

    <string name="add_intake">Add Intake</string>
    <string name="add_product">Add Product</string>
    <string name="import_from_csv_file">Import From CSV File</string>
    <string name="search">Search</string>
    <string name="grams">grams</string>
</resources>